			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * PORT: fixed many signed/unsigned warnings generated by GCC 3.3

  * Added announced compatibility checks for last/2 (library checklast).

  * DOCS: Updated some comments in Makefile and INSTALL.notes files.

  * FIXED: Compiler warning in pl-proc.c.  Paulo Moura.


VERSION 5.1.12 (April 25, 2003)
===============================

  * ADDED: library(checklast) to check for the modified argument order of
    last/2.

  * ADDED/FIXED: Bug#46: loading .qlf files using use_module/1 and friends.
    Holger Kanwischer.

  * PORT: Patch to rc/access.c for HPUX-11 (and possibly more).  Tim Brown.

  * ENHANCED: messages printed with set_prolog_flag(verbose_autoload, true)

  * MODIFIED: Argument order of last/2.  Compatibility to other Prolog
    systems.  Please update your sources.  If you have a Unix shell
    and utitilities you find most calls using

		grep -n '\<last(' `find . -name '*.pl'`

    On all systems you can run ?- check_old_last. before loading your
    program.  This spots if last/2 is used at compiletime as well as
    trapping suspicious calls at runtime.

  * ADDED: time/1 and profile/1,3 to call expand_goal/2.  Time/1 to
    report elapsed time.

  * FIXED: Bug#42: starting a saved state with no known Prolog home.

  * FIXED: do not show FAIL from ports created by dummy choicepoints.
    Alan Baljeu.

  * FIXED: Handling QLF file if their location has changed.  Various
    posters to the mailing list.  Also fixed re-entrance problem in
    the QLF-loader (affecting various XPCE tools) and location sources
    of XPCE objects.  The installation should now be truly position
    independent.

  * FIXED: autoloader bug in multi-threaded code.
