@@ -7,6 +7,8 @@
 					http://gollem.swi.psy.uva.nl/bugzilla/
 					--------------------------------------
 
+  * ADDED: Pentium-based timing of virtual machine (development only)
+
   * PORT: fixed many signed/unsigned warnings generated by GCC 3.3
 
   * Added announced compatibility checks for last/2 (library checklast).
